Fix everything with the Extension

--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html style="width: 12em;">
 
 <head>
 </head>
 
 <body>
-    <input id="toggle" name="toggle" type="checkbox">
-    <label for="toggle">Classroom dark mode? </label>
+    <center>
+        <label for="toggle">Classroom dark mode? </label>
+        <input id="toggle" name="toggle" type="checkbox">
+    </center>
+    <script src="storeManager.js"></script>
     <script src="popup.js"></script>
 </body>
 
